<resources>
    <string name="app_name">shoppingCartApp</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="Signin">Sign In</string>
    <string name="signUp">Sign up</string>
    <string name="FirstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Age">Age</string>
    <string name="endPointUrl">http://64.227.27.167:3000/</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="show_cart">Go to Cart</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="total">Total : </string>
    <string name="Address">Address</string>
    <string name="city">City</string>
    <string name="pincode">Pin Code</string>
    <string name="confire_btn">Confirm To Pay</string>
    <string name="Phone">Mobile Number</string>
    <string name="state">State</string>
    <string name="previousOrders">Previous Orders</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="Order_at">Order At</string>
    <string name="amount">Amount:</string>
    <string name="Quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="Address_colen">"Address:"</string>
    <string name="login">Login</string>
</resources>